tests/miniJava/neg/003000_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = true System.out.println ; } }
